# opendesk

./: .gitignore  LICENSE  README.md  SECURITY.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: new-desk.yml
.github/workflows/: ci.yml  release.yml
scripts/: mac-compile-icon.sh  render-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  notification.rs  panel.rs  reminder.rs  state.rs  tray.rs
src-tauri/src/ble/: errors.rs  linak.rs  manager.rs  mod.rs  move_coord.rs  state_observer.rs
src/components/popover/: custom-editor.tsx  device-picker.tsx  footer.tsx  height-header.tsx  popover.tsx  preset-item.tsx  preset-list.tsx  reminder.tsx  slider-column.tsx
src/components/settings/: accent-picker.tsx  settings-view.tsx  theme-picker.tsx  unit-picker.tsx
src/components/ui/: interval-picker.tsx  nudge-button.tsx  toggle.tsx
src/hooks/: useAutoSession.ts  useDesk.ts  useResolvedTheme.ts
src/lib/: accents.ts  constants.ts  desk.ts  icons.tsx  presets.ts  units.ts  updater.ts
